test(ratelimit): update tests for refactored rate limit module
- Update RateLimiterTest to use Builder API with LocalRateLimitStorage
- Update RateLimitInterceptorTest to mock RateLimiterBuilder
- Update RateLimitWhitelistCheckerTest to use DefaultWhitelistStrategy
- Update RateLimiterIntegrationTest to use Builder API
- Remove Redisson-specific tests (moved to afg-redis module)
- Add Spring RequestContextHolder setup in unit tests
- Fix test imports for new package structure